# substrate-adapters-bundle

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  STATUS.md  cliff.toml  deny.toml  llms.txt
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  doc-links.yml  fr-coverage.yml  scorecard.yml  security.yml  trufflehog.yml
crates/cliproxy-adapter/: Cargo.toml
crates/cliproxy-adapter/src/: lib.rs
crates/context-budget/: Cargo.toml
crates/context-budget/src/: lib.rs
crates/engine-agentapi/: Cargo.toml
crates/engine-agentapi/src/: lib.rs
crates/engine-claude/: Cargo.toml
crates/engine-claude/src/: lib.rs
crates/engine-codex/: Cargo.toml
crates/engine-codex/src/: lib.rs
crates/engine-forge/: Cargo.toml
crates/engine-forge/src/: lib.rs
crates/ffi_utils/: Cargo.toml
crates/ffi_utils/src/: lib.rs
crates/omniroute-adapter/: Cargo.toml
crates/omniroute-adapter/src/: lib.rs
crates/pheno-context/: .codespellrc  .editorconfig  AGENTS.md  CHANGELOG.md  Cargo.source-workspace.toml  Cargo.toml  README.md  SECURITY.md  SPEC.md  STATUS.md  WORKLOG.md  deny.toml
crates/pheno-context/.github/workflows/: audit.yml  ci.yml  deny.yml  sbom.yml
crates/pheno-context/crates/pheno-context/: CHANGELOG.md  Cargo.toml
crates/pheno-context/crates/pheno-context/src/: lib.rs  oidc.rs
crates/pheno-context/crates/pheno-context/tests/: smoke_test.rs
crates/pheno-context/src/: lib.rs  oidc.rs
crates/pheno-context/worklogs/: l4-68-pheno-context-2026-06-11.json
crates/pheno-crypto/src/: lib.rs
crates/pheno-fs/src/: lib.rs
crates/pheno-otel/: Cargo.toml
crates/pheno-runtime-config/: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  WORKLOG.md  deny.toml  llms.txt
crates/pheno-runtime-config/.github/workflows/: ci.yml
crates/pheno-runtime-config/src/: file.rs  lib.rs  sighup.rs
crates/pheno-runtime-config/tests/: integration_basic.rs  integration_file.rs
crates/pheno-shell/src/: lib.rs
crates/pheno-testing/src/: lib.rs
crates/phenoUtils/: .editorconfig  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  FUNDING.yml  LICENSE-MIT  SECURITY.md  SPEC.md  deny.toml  justfile  llms.txt  renovate.json5  rustfmt.toml
crates/phenoUtils/.devcontainer/: devcontainer.json
crates/phenoUtils/.github/: dependabot.yml
crates/phenoUtils/.github/ISSUE_TEMPLATE/: bug.md  feature.md
crates/phenoUtils/.github/workflows/: cargo-deny.yml  ci.yml  fr-coverage.yml
crates/phenoUtils/crates/pheno-crypto/: Cargo.toml
crates/phenoUtils/crates/pheno-fs/: Cargo.toml
crates/phenoUtils/crates/pheno-net/: Cargo.toml
crates/phenoUtils/crates/pheno-net/src/: lib.rs
crates/phenoUtils/crates/pheno-schema-port/: Cargo.toml  ORIGIN.md
crates/phenoUtils/crates/pheno-schema-port/src/: lib.rs  schema.rs
crates/phenoUtils/crates/pheno-schema-port/src/adapters/: json_schema.rs  zod.rs
crates/phenoUtils/crates/pheno-schema-port/tests/: schema.rs
crates/phenoUtils/crates/pheno-shell/: Cargo.toml
crates/phenoUtils/crates/pheno-shell/src/: lib.rs
crates/phenoUtils/crates/pheno-testing/: Cargo.toml
crates/phenoUtils/docs/history/archived-repos/: Cryptora.md
crates/phenoUtils/docs/journeys/manifests/: README.md
crates/phenoUtils/docs/operations/: journey-traceability.md
crates/phenoUtils/docs/operations/iconography/: SPEC.md
crates/phenoUtils/docs/worklogs/: worklog.md
crates/phenoUtils/scripts/: audit.sh  check-cliff-template.sh
crates/phenoUtils/tests/: smoke_test.rs
crates/phenotype-manifest/: Cargo.toml
crates/phenotype-manifest/examples/: web-service.nvms.json
crates/phenotype-manifest/src/: lib.rs  schema.rs
crates/phenotype-manifest/tests/: schema_validation.rs
crates/phenotype-port-adapter-shim/: Cargo.toml
crates/phenotype-port-adapter-shim/src/: types.rs
crates/phenotype-shared/: Cargo.toml
crates/phenotype-shared/crates/phenotype-manifest/src/: lib.rs
crates/phenotype-shared/crates/phenotype-manifest/tests/: validate.rs
crates/phenotype-shared/crates/phenotype-port-adapter-shim/: Cargo.toml
crates/phenotype-shared/crates/phenotype-port-adapter-shim/src/: adapter.rs  lib.rs
crates/phenotype-shared/crates/phenotype-port-adapter-shim/tests/: mock_adapter.rs
crates/phenotype-shared/schemas/: odin.nvms.schema.json
crates/substrate-trace/: Cargo.toml
crates/substrate-trace/src/: lib.rs
docs/: phenolang-monorepo-index.md
src/: lib.rs  propagation.rs
