[package]
name.workspace        = true
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
documentation.workspace = true
description           = "Shim re-export of substrate::cliproxy-adapter for the adapters bundle"
publish               = false

[dependencies]
cliproxy-adapter = { workspace = true }
