[package]
name = "context-budget"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
documentation.workspace = true
description           = "Shim re-export of substrate::context-budget for the adapters bundle"
publish               = false

[dependencies]
context-budget = { workspace = true }
