[package]
name = "engine-agentapi"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
documentation.workspace = true
description           = "Shim re-export of substrate::engine_agentapi for the adapters bundle"
publish               = false

[dependencies]
engine-agentapi = { workspace = true }
