[package]
name = "engine-claude"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
documentation.workspace = true
description           = "Shim re-export of substrate::engine-claude for the adapters bundle"
publish               = false

[dependencies]
engine-claude = { workspace = true }
