# PhenoUtils - Phenotype Utility Workspace
#
# Contains shared utility crates for the Pheno ecosystem
[workspace]
members = [
    "crates/pheno-shell",
    "crates/pheno-fs",
    "crates/pheno-crypto",
    "crates/pheno-net",
    "crates/pheno-testing",
    "crates/pheno-schema-port",
]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
