[package]
name = "phenotype-manifest"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "`odin.nvms` v0.2 schema + validator + JSON Schema emission."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["preserve_order"] }
thiserror = "1.0"

[dev-dependencies]
# `draft202012` feature is required because `schemars 0.8` emits
# Draft 2020-12 by default — the test must validate against the same
# dialect or we'd test a phantom spec.
jsonschema = { version = "0.17", features = ["draft202012"] }

[[bin]]
name = "dump-schema"
path = "src/bin/dump_schema.rs"
