[package]
name = "pheno-context"
description = "Canonical request context for the pheno-* fleet. Builder, header extraction, and structured metadata."
keywords = ["context", "request", "headers", "phenotype", "tracing"]
categories = ["web-programming", "data-structures"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "pheno_context"
path = "src/lib.rs"

[features]
default = []
oidc = []

[dependencies]
thiserror = { workspace = true }
http = "1.1"

[dev-dependencies]
http = "1.1"
proptest = "1"
