[package]
name = "pheno-net"
version = "0.1.0"
edition = "2024"
description = "Network utilities for Pheno"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.13", features = ["json", "rustls"] }
url = "2.5"
