[package]
name = "pheno-schema-port"
version = "0.1.0"
edition = "2021"
description = "PhenoSchema hexagonal port definitions"
license = "MIT"
repository = "https://github.com/KooshaPari/phenoUtils"
documentation = "https://github.com/KooshaPari/phenoUtils/tree/main/crates/pheno-schema-port"
keywords = ["phenotype", "schema", "ports", "hexagonal"]
categories = ["development-tools"]
authors = ["Koosha Pari"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
