[package]
name = "pheno-shell"
version = "0.1.0"
edition = "2024"
description = "CLI shell framework for Pheno"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
